package fr.univnantes.alma.Model;

public interface Card {
    
}
